fixed spacing in css

--- a/Q8/general.css
+++ b/Q8/general.css
@@ -1,6 +1,3 @@
-/* https://coolors.co/palette/cb997e-eddcd2-fff1e6-f0efeb-ddbea9-a5a58d-b7b7a4 
-    https://coolors.co/palette/cb997e-ddbea9-ffe8d6-b7b7a4-a5a58d-6b705c */
-
 * {
     box-sizing: border-box;
 }
@@ -10,6 +7,14 @@ body {
     background-color: #f0efeb;
 }
 
+.header {
+    display: flex;
+    padding: 10px;
+    background-color: #6B705C;
+    text-align: center;
+    color: #f0efeb;
+}
+
 .logo {  
     padding: 0px 20px;
 }
@@ -17,14 +22,6 @@ body {
 .logo img {
     width: 100px;
     height: 100px;
-}
-
-.header {
-    display: flex;
-    padding: 10px;
-    background-color: #6B705C;
-    text-align: center;
-    color: #f0efeb;
 }
 
 .titles {
@@ -50,8 +47,6 @@ body {
     top: 10px;
 }
 
-
-
 .menu a {
     display: block;
     padding: 10px 10px; 
@@ -66,9 +61,8 @@ body {
 }
 
 .content {
-    /* float: right; */
     max-width: 80%; 
-    min-height: 700px; /* temp */
+    min-height: 650px;
     padding: 20px;
     background-color: #f0efeb;
 }
@@ -103,11 +97,8 @@ body {
     border: 1px solid black;
     border-radius: 50px;
     padding: 30px;
-
     background-color:#A5A58D;
-
     box-shadow: 10px 10px rgb(29, 29, 29);
-
     color: black;
 }
 
@@ -120,8 +111,6 @@ body {
     position: relative;
     margin: auto;
 }
-
-
 
 .prompt {
     font-weight: bold;
@@ -141,14 +130,4 @@ input[type=submit], input[type=reset] {
 
   input[type=submit]:hover, input[type=reset]:hover {
     background-color: #DDBEA9;
-  }
-
-  .three-paws {
-    display: inline-block;
-    opacity: 0.4;   
-  }
-
-  .three-paws img {
-    width: 100px;
-    height: 100px;
   }
